# slaif

./: .gitignore  0_data_preparation.ipynb  1_bert_train.ipynb  2_gams_1b_sft.ipynb  Inference_demo.ipynb  README.md  excersise-1.ipynb  main.py  pyproject.toml
