[project]
name = "slaif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.18.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
    "trl[peft]>=1.5.1",
]
